Add image to kungpaochicken.html

--- a/recipes/kungpaochicken.html
+++ b/recipes/kungpaochicken.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Kung Pao Chicken</h1>
+    <img src="<img src="https://www.allrecipes.com/thmb/rPlX2DeRqtUxkaAJYHA23_PLUmk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/290890_original-f425d458ea2b4cec8d4a855ce6929707.jpg" alt="kung pao chicken"/>
 </body>
 </html>
