--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/kungpaochicken.html">Kung Pao Chicken</a>
+    <ul>
+    <li><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></li>
+    </ul>
 </body>
 </html>
