--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,30 @@
 <body>
     <h1><center>World's Best Lasagna</center></h1>
     <img src ="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="world's best lasagna" height ="400" width="600">
+    <h2>Description</h2>
+    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>¾ pound lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>2 cloves garlic, crushed</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6.5 ounce) cans canned tomato sauce</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>½ cup water</li>
+        <li>2 tablespoons white sugar</li>
+        <li>4 tablespoons chopped fresh parsley, divided</li>
+        <li>1 ½ teaspoons dried basil leaves</li>
+        <li>1 ½ teaspoons salt, divided, or to taste</li>
+        <li>1 teaspoon Italian seasoning</li>
+        <li>½ teaspoon fennel seeds</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>12 lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg</li>
+        <li>¾ pound mozzarella cheese, sliced</li>
+        <li>¾ cup grated Parmesan cheese</li>
+    </ul>
 </body>
 </html>
