Add Steps to lasagna.html and Enjoy! message to recipes.

--- a/recipes/kungpaochicken.html
+++ b/recipes/kungpaochicken.html
@@ -34,7 +34,7 @@
         <li>Transfer water chestnut mixture to a medium skillet. Heat slowly over medium heat until aromatic.</li>
         <li>Meanwhile, transfer chicken from marinade into a large skillet; cook over medium-high heat, stirring, until chicken is cooked through and juices run clear.
         </li>
-        <li>Combine water chestnut mixture and sautéed chicken together in one skillet. Adjust heat and simmer together until sauce thickens.</li>
+        <li>Combine water chestnut mixture and sautéed chicken together in one skillet. Adjust heat and simmer together until sauce thickens. Enjoy!</li>
     </ol>
 </body>
 </html>
