--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
     <li><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></li>
     <li><a href="recipes/lasagna.html">"World's Best Lasagna"</a></li>
+    <li><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></li>
     </ul>
 </body>
 </html>
