--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -9,5 +9,21 @@
     <h1><center>Slow-Cooker Pepper Steak</center></h1>
     <img src="https://www.allrecipes.com/thmb/8IWW1U-9DKux30XhT80qwneGWrI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-23567-slow-cooker-pepper-steak-Beauties-4x3-08926a13d0b8423288bb83bcabc217fb.jpg" alt="pepper steak" height="400" width="600">
     <h2>Description</h2>
+    <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b> It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 pounds beef sirloin, cut into 2 inch strips</li>
+        <li>¾ teaspoon garlic powder, or to taste</li>
+        <li>3 tablespoons vegetable oil</li>
+        <li>1 cube beef bouillon</li>
+        <li>¼ cup hot water</li>
+        <li>1 tablespoon cornstarch</li>
+        <li>1 tablespoon cornstarch</li>
+        <li>2 large green bell peppers, roughly chopped</li>
+        <li>1 (14.5 ounce) can stewed tomatoes, with liquid</li>
+        <li>3 tablespoons soy sauce</li>
+        <li>1 teaspoon white sugar</li>
+        <li>1 teaspoon salt</li>
+    </ul>
 </body>
 </html>
