--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -6,7 +6,7 @@
     <title>Pepper Steak</title>
 </head>
 <body>
-    <h1><center>Slow-Cooker Pepper Steak</center></h1>
+    <h1>Slow-Cooker Pepper Steak</h1>
     <img src="https://www.allrecipes.com/thmb/8IWW1U-9DKux30XhT80qwneGWrI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-23567-slow-cooker-pepper-steak-Beauties-4x3-08926a13d0b8423288bb83bcabc217fb.jpg" alt="pepper steak" height="400" width="600">
     <h2>Description</h2>
     <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b> It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
@@ -25,5 +25,13 @@
         <li>1 teaspoon white sugar</li>
         <li>1 teaspoon salt</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Sprinkle beef sirloin strips with garlic powder. Heat vegetable oil in a large skillet over medium heat and sear beef strips, about 5 minutes per side. Transfer to a slow cooker.</li>
+        <li>Mix bouillon cube with hot water in a separate container until dissolved, then mix in cornstarch until dissolved.</li>
+        <li>Pour into the slow cooker with beef strips. Stir in onion, green peppers, stewed tomatoes, soy sauce, sugar, and salt.</li>
+        <li>Cover, and cook on High for 3 to 4 hours, or on Low for 6 to 8 hours. Enjoy!</li>
+    </ol>
 </body>
 </html>
