--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></li>
-    <li><a href="recipes/lasagna.html">"World's Best Lasagna"</a></li>
-    <li><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></li>
+    <div class="center">
+    <li class="home"><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></li>
+    <li class="home down"><a href="recipes/lasagna.html">"World's Best Lasagna"</a></li>
+    <li class="home down"><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></li>
     </ul>
+</div>
 </body>
 </html>
