--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -9,9 +9,10 @@
 <body>
     <h1>Slow-Cooker Pepper Steak</h1>
     <img src="https://www.allrecipes.com/thmb/8IWW1U-9DKux30XhT80qwneGWrI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-23567-slow-cooker-pepper-steak-Beauties-4x3-08926a13d0b8423288bb83bcabc217fb.jpg" alt="pepper steak" height="400" width="600">
-    <h2>Description</h2>
-    <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b> It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
+    <h2 class="desc">Description</h2>
+    <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b></p> <p>It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
     <h2>Ingredients</h2>
+
     <ul>
         <li>2 pounds beef sirloin, cut into 2 inch strips</li>
         <li>¾ teaspoon garlic powder, or to taste</li>
@@ -26,6 +27,7 @@
         <li>1 teaspoon white sugar</li>
         <li>1 teaspoon salt</li>
     </ul>
+   
     <h2>Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
