Add media query for smaller widths and add left margin to H2s

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="world's best lasagna" height ="400" width="600">
     <h2 class="desc">Description</h2>
     <p>This lasagna recipe takes a little work, but it is <b>so satisfying and filling that it's worth it!</b></p>
-    <h2>Ingredients</h2>
+    <h2 class="leftpush">Ingredients</h2>
     <ul>
         <li>1 pound sweet Italian sausage</li>
         <li>¾ pound lean ground beef</li>
@@ -34,7 +34,7 @@
         <li>¾ pound mozzarella cheese, sliced</li>
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="leftpush">Steps</h2>
     <ol>
       <li>Gather all your ingredients.</li> 
       <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
