--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -11,7 +11,7 @@
     <img src="https://www.allrecipes.com/thmb/8IWW1U-9DKux30XhT80qwneGWrI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-23567-slow-cooker-pepper-steak-Beauties-4x3-08926a13d0b8423288bb83bcabc217fb.jpg" alt="pepper steak" height="400" width="600">
     <h2 class="desc">Description</h2>
     <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b></p> <p>It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
-    <h2>Ingredients</h2>
+    <h2 class="leftpush">Ingredients</h2>
 
     <ul>
         <li>2 pounds beef sirloin, cut into 2 inch strips</li>
@@ -28,7 +28,7 @@
         <li>1 teaspoon salt</li>
     </ul>
    
-    <h2>Steps</h2>
+    <h2 class="leftpush">Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
         <li>Sprinkle beef sirloin strips with garlic powder. Heat vegetable oil in a large skillet over medium heat and sear beef strips, about 5 minutes per side. Transfer to a slow cooker.</li>
