--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <div class="center">
-    <li class="home"><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></li>
-    <li class="home down"><a href="recipes/lasagna.html">"World's Best Lasagna"</a></li>
-    <li class="home down"><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></li>
+    <div class="home"><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></div>
+    <div class="home down"><a href="recipes/lasagna.html">"World's Best Lasagna"</a></div>
+    <div class="home down"><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></div>
 </div>
 </body>
 </html>
