Update CSS for smaller widths and add links to recipes
Allows users to access original recipes by clicking the headers.
This allows for the description to look better on smaller devices.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>World's Best Lasagna</h1>
+    <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/" target="_blank"><h1>World's Best Lasagna</h1></a>
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="world's best lasagna" height ="400" width="600">
     <h2 class="desc">Description</h2>
     <p>This lasagna recipe takes a little work, but it is <b>so satisfying and filling that it's worth it!</b></p>
