--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Slow-Cooker Pepper Steak</h1>
+    <a href="https://www.allrecipes.com/recipe/23567/slow-cooker-pepper-steak/" target="_blank"><h1>Slow-Cooker Pepper Steak</h1></a>
     <img src="https://www.allrecipes.com/thmb/8IWW1U-9DKux30XhT80qwneGWrI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-23567-slow-cooker-pepper-steak-Beauties-4x3-08926a13d0b8423288bb83bcabc217fb.jpg" alt="pepper steak" height="400" width="600">
     <h2 class="desc">Description</h2>
     <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b></p> <p>It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
