Add Simpson gif and change background colour to blue shade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <div class="center">
+    <img id="gif" src="images/funny-man.gif" alt="cooking gif">
     <div class="home"><a href="recipes/kungpaochicken.html">Kung Pao Chicken</a></div>
     <div class="home down"><a href="recipes/lasagna.html">"World's Best Lasagna"</a></div>
     <div class="home down"><a href="recipes/peppersteak.html">Slow-Cooker Pepper Steak</a></div>
