--- a/recipes/kungpaochicken.html
+++ b/recipes/kungpaochicken.html
@@ -12,6 +12,7 @@
     <h2 class="desc">Description</h2>
     <p>Kung Pao chicken (a.k.a. Gong Bao or Kung Po) is a stir-fried Chinese dish that consists of <b>cubed chicken in a sweet, spicy, and savory sauce.</b></p> <p>It originated in southwestern China in the early 1800s.</p>
     <h2 class="leftpush">Ingredients</h2>
+    <div class="center-list">
     <ul>
         <li>2 tablespoons cornstarch, dissolved in 2 tablespoons water</li>
         <li>2 tablespoons white wine, divided</li>
@@ -26,7 +27,9 @@
         <li>4 green onions, chopped</li>
         <li>1 tablespoon chopped garlic</li>
     </ul>
+    </div>
     <h2 class="leftpush">Steps</h2>
+    <div class="center-list">
     <ol>
         <li>Gather all ingredients.</li>
         <li>Combine water and cornstarch in a cup; set aside.</li>
@@ -37,5 +40,6 @@
         </li>
         <li>Combine water chestnut mixture and sautéed chicken together in one skillet. Adjust heat and simmer together until sauce thickens. Enjoy!</li>
     </ol>
+  </div>
 </body>
 </html>
