--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,6 +12,7 @@
     <h2 class="desc">Description</h2>
     <p>This lasagna recipe takes a little work, but it is <b>so satisfying and filling that it's worth it!</b></p>
     <h2 class="leftpush">Ingredients</h2>
+    <div class="center-list">
     <ul>
         <li>1 pound sweet Italian sausage</li>
         <li>¾ pound lean ground beef</li>
@@ -34,7 +35,9 @@
         <li>¾ pound mozzarella cheese, sliced</li>
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
+    </div>
     <h2 class="leftpush">Steps</h2>
+    <div class="center-list">
     <ol>
       <li>Gather all your ingredients.</li> 
       <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
@@ -47,5 +50,6 @@
       <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
       <li>Rest lasagna for 15 minutes before serving. Enjoy!</li> 
     </ol>
+    </div>
 </body>
 </html>
