--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -12,7 +12,7 @@
     <h2 class="desc">Description</h2>
     <p>This crockpot pepper steak recipe is <b>very tender and flavorful.</b></p> <p>It's great to make ahead of time in the slow cooker and then serve over rice, egg noodles, or chow mein.</p>
     <h2 class="leftpush">Ingredients</h2>
-
+    <div class="center-list">
     <ul>
         <li>2 pounds beef sirloin, cut into 2 inch strips</li>
         <li>¾ teaspoon garlic powder, or to taste</li>
@@ -27,7 +27,7 @@
         <li>1 teaspoon white sugar</li>
         <li>1 teaspoon salt</li>
     </ul>
-   
+   </div>
     <h2 class="leftpush">Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
