Center peppersteak.html steps list

--- a/recipes/peppersteak.html
+++ b/recipes/peppersteak.html
@@ -29,6 +29,7 @@
     </ul>
    </div>
     <h2 class="leftpush">Steps</h2>
+    <div class="center-list">
     <ol>
         <li>Gather all ingredients.</li>
         <li>Sprinkle beef sirloin strips with garlic powder. Heat vegetable oil in a large skillet over medium heat and sear beef strips, about 5 minutes per side. Transfer to a slow cooker.</li>
@@ -36,5 +37,6 @@
         <li>Pour into the slow cooker with beef strips. Stir in onion, green peppers, stewed tomatoes, soy sauce, sugar, and salt.</li>
         <li>Cover, and cook on High for 3 to 4 hours, or on Low for 6 to 8 hours. Enjoy!</li>
     </ol>
+</div>
 </body>
 </html>
